<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SewaActivity"
    android:background="@color/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="Menu Sewa Motor"
        android:textSize="20dp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_gravity="center"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Pilih Motor : "
        android:layout_gravity="center"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/table" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_sewa_motor"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_baseline_motorcycle_24"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputSewa"
            android:layout_width="269dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:autofillHints=""
            android:hint="@string/motor"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_hari"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_baseline_access_time_24"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputHari"
            android:layout_width="269dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:autofillHints=""
            android:hint="@string/hari"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnKembali"
            android:text="@string/btnKembali"
            android:layout_weight="0.8"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="65dp"
            android:backgroundTint="@color/tombol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnProses"
            android:text="@string/btnProses"
            android:layout_weight="0.8"
            android:layout_marginEnd="65dp"
            android:layout_marginStart="20dp"
            android:backgroundTint="@color/tombol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>


</LinearLayout>
